# claw-solana

./: .gitignore  Anchor.toml  Cargo.toml  DESIGN.md  README.md  SKILL.md  package.json  run-tests.sh  tsconfig.json
app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  idl.json  index.css  main.tsx
programs/claw/: Cargo.toml
programs/claw/src/: lib.rs
tests/: claw.ts
